feat: total visual overhaul

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1e1b4b" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="UniRank Global - Your comprehensive guide to global university rankings, aggregating data from QS, Times Higher Education, ARWU, and US News"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>🎓 University Ranking Aggregator</title>
+    <title>UniRank Global | University Rankings Aggregator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
